# REPO-MONITOR-AGENT

./: graph.py  main.py  model.py  models.py  pydantic_types.py  pyproject.toml  requirements.txt  test.py  test2.py  test_script.sh  tools.py
agent/: conditions.py  graph.py
agent-backend/: dev_start.sh  pyproject.toml  test_script.sh
agent-backend/agent/: graph.py
agent-backend/agent/nodes/: get_contents.py  get_issue.py  get_repo_files.py  git_metadata.py
agent-backend/api/: chat.py  main.py
agent-backend/api/core/: config.py
agent-backend/config/: github.py
agent-backend/models/: outputs.py
agent-backend/utils/: image_show.py
agent/nodes/: approval_node.py  get_contents.py  get_issue.py  get_repo_files.py  git_metadata.py  important_files.py  summarize.py
api/: api.py  chat.py  main.py
api/schemas/: chat.py
frontend/: package-lock.json
frontend/app/: page.tsx
llm/: ollama.py
models/: outputs.py  state.py
primary-backend/: package.json  tsconfig.json
primary-backend/src/: server.ts
tools/: github.py  issue_detector.py  parse_repo.py
utils/: github.py  repo.txt  show_image.py
