[project]
name = "github-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.5",
    "ipython>=9.10.0",
    "langchain>=1.2.8",
    "langchain-ollama>=1.0.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
